jenkins/jenkins-deployment.yaml
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: jenkins  
  namespace: kube-system
spec:  
  replicas: 1  
  strategy:  
    type: RollingUpdate  
    rollingUpdate:  
      maxSurge: 2  
      maxUnavailable: 0  
  template:  
    metadata:  
      labels:  
        app: jenkins  
    spec:  
      containers:  
      - name: jenkins  
        image: jenkins:latest  
        imagePullPolicy: IfNotPresent  
        ports:  
        - containerPort: 8080  
          name: web  
          protocol: TCP  
        - containerPort: 50000  
          name: agent  
          protocol: TCP  
        volumeMounts:  
#        - name: jenkinshome  
#          mountPath: /var/jenkins_home  
        - name: jenkinshome
          mountPath: /var/jenkins_home
        - name: docker
          mountPath: /usr/bin/docker
        - name: dockersocket
          mountPath: /var/run/docker.sock
      volumes:  
#      - name: jenkinshome  
#        nfs:  
#          server: 192.168.7.206  
#          path: "/opt/jenkins" 
      - name: jenkinshome
        hostPath:
          path: /tmp/test
      - name: docker
        hostPath:
          path: /usr/bin/docker 
      - name: dockersocket
        hostPath:
          path: /var/run/docker.sock
      serviceAccount: "jenkins-admin"
